--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@ title: home
 navigation_weight: 1
 ---
 <div class="row">
-  <div class="col-md-6">
-    {% include content.html %}
-  </div>
-  <div class="col-md-6">
-    {% include specs.html %}
-  </div>
-  <div class="col-xs-12">
-    {% include genres.html %}
-  </div>
+	<div class="col-xs-12">
+		{% include button.html %}
+	</div>
 </div>
